package com.adler.apical.domain.repository;

import com.adler.apical.domain.model.Acessos;
import org.springframework.data.jpa.repository.JpaRepository;

/**
 *
 * @author adler
 */
public interface AcessosRepository extends JpaRepository<Acessos, Long> {

}
