@startuml
class com.adler.apical.ApiCalApplication
class com.adler.apical.api.controller.AcessosController {
    +public ModelAndView listarAcessos()
    +public ModelAndView listarAcesso()
    +public ModelAndView criarAcesso()
    +public ModelAndView editarAcesso()
}
class com.adler.apical.api.controller.SalaController {
    +public ModelAndView listarLab()
    +public ModelAndView criarLab()

}
class com.adler.apical.api.controller.UsuarioController {
    +public ModelAndView listarUsuario()
    +public ModelAndView criarUsuario()
}
class com.adler.apical.domain.model.Acessos {
    -long id
    -boolean verificacao
    -Usuario usuario
    -Sala sala

    + Contructors()
    + Getter´s and Setter´s()
    + int hashCode()
    + boolean equals()
}
class com.adler.apical.domain.model.Sala {
    -long id
    -String nome
    -boolean estado

    + Contructors()
    + Getter´s and Setter´s()
    + int hashCode()
    + boolean equals()
}
class com.adler.apical.domain.model.Usuario {
    -long id
    -String login
    -String senha

    + Contructors()
    + Getter´s and Setter´s()
    + int hashCode()
    + boolean equals()
}
class com.adler.apical.domain.service.AcessoService {
    +Acessos salvar(Acessos acesso)
    +void excluir(Long acessoId)
}
class com.adler.apical.domain.service.UsuarioService {
    +Usuario salvar(Usuario usuario)
    +void excluir(Long usuarioId)
}
class org.springframework.boot.SpringApplication
interface com.adler.apical.domain.repository.AcessosRepository
interface com.adler.apical.domain.repository.SalaRepository
interface com.adler.apical.domain.repository.UsuarioRepository
com.adler.apical.ApiCalApplication ..> org.springframework.boot.SpringApplication
com.adler.apical.api.controller.AcessosController ..> com.adler.apical.domain.model.Acessos
com.adler.apical.api.controller.AcessosController ..> com.adler.apical.domain.service.AcessoService
com.adler.apical.api.controller.AcessosController ..> com.adler.apical.domain.repository.AcessosRepository
com.adler.apical.api.controller.SalaController ..> com.adler.apical.domain.model.Sala
com.adler.apical.api.controller.SalaController ..> com.adler.apical.domain.repository.SalaRepository
com.adler.apical.api.controller.UsuarioController ..> com.adler.apical.domain.model.Usuario
com.adler.apical.api.controller.UsuarioController ..> com.adler.apical.domain.service.UsuarioService
com.adler.apical.api.controller.UsuarioController ..> com.adler.apical.domain.repository.UsuarioRepository
com.adler.apical.domain.service.AcessoService ..> com.adler.apical.domain.model.Acessos
com.adler.apical.domain.service.AcessoService ..> com.adler.apical.domain.repository.AcessosRepository
com.adler.apical.domain.service.UsuarioService ..> com.adler.apical.domain.model.Usuario
com.adler.apical.domain.service.UsuarioService ..> com.adler.apical.domain.repository.UsuarioRepository
com.adler.apical.domain.repository.AcessosRepository ..> com.adler.apical.domain.model.Acessos
com.adler.apical.domain.repository.SalaRepository ..> com.adler.apical.domain.model.Sala
com.adler.apical.domain.repository.UsuarioRepository ..> com.adler.apical.domain.model.Usuario
@enduml